# Plink

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  main.cpp
asset/Coin/: info.json
asset/beam/: info.json
asset/beam/cache/: audioBuffer_face1651.txt  audioBuffer_face2430.txt  audioBuffer_face2597.txt  audioBuffer_face2695.txt  audioBuffer_face2953.txt  audioBuffer_face3239.txt  audioBuffer_face3574.txt  audioBuffer_face4524.txt  audioBuffer_face4976.txt  audioBuffer_face6094.txt  audioBuffer_face6194.txt  audioBuffer_face6432.txt  audioBuffer_face902.txt  audioBuffer_face966.txt
asset/bigbunny/: info.json
asset/bowl/: info.json
asset/bunny/: info.json
asset/circular_plate/: info.json
asset/dragon/: info.json
asset/dragon/cache/: audioBuffer_face14368.txt
asset/ellipsoid/: info.json
asset/ellipsoid/cache/: audioBuffer_face1019.txt  audioBuffer_face1026.txt  audioBuffer_face1039.txt  audioBuffer_face1051.txt  audioBuffer_face1095.txt  audioBuffer_face125.txt  audioBuffer_face1308.txt  audioBuffer_face1350.txt  audioBuffer_face1517.txt  audioBuffer_face1540.txt  audioBuffer_face1551.txt  audioBuffer_face1567.txt  audioBuffer_face1573.txt  audioBuffer_face1587.txt  audioBuffer_face1588.txt  audioBuffer_face1699.txt  audioBuffer_face1853.txt  audioBuffer_face196.txt  audioBuffer_face2953.txt  audioBuffer_face3929.txt  audioBuffer_face6456.txt  audioBuffer_face803.txt  audioBuffer_face912.txt  audioBuffer_face952.txt  audioBuffer_face974.txt
asset/glass/: info.json
asset/plate/: info.json
asset/plate/cache/: audioBuffer_face162.txt  audioBuffer_face2389.txt  audioBuffer_face3953.txt  audioBuffer_face4105.txt  audioBuffer_face4304.txt  audioBuffer_face5544.txt  audioBuffer_face6995.txt  audioBuffer_face8043.txt
asset/rod/: info.json
asset/simpleTet/: info.json
asset/sphere/: info.json
asset/sphere/cache/: audioBuffer_face969.txt
asset/unit_sphere/: info.json
data/bunny/: bunny_mode0.csv  bunny_mode1.csv  bunny_mode10.csv  bunny_mode11.csv  bunny_mode12.csv  bunny_mode2.csv  bunny_mode3.csv  bunny_mode4.csv  bunny_mode5.csv  bunny_mode6.csv  bunny_mode7.csv  bunny_mode8.csv  bunny_mode9.csv
data/dragon/: dragon_mode0.csv  dragon_mode1.csv  dragon_mode10.csv  dragon_mode11.csv  dragon_mode12.csv  dragon_mode13.csv  dragon_mode14.csv  dragon_mode15.csv  dragon_mode16.csv  dragon_mode17.csv  dragon_mode18.csv  dragon_mode19.csv  dragon_mode2.csv  dragon_mode20.csv  dragon_mode21.csv  dragon_mode22.csv  dragon_mode23.csv  dragon_mode24.csv  dragon_mode25.csv  dragon_mode26.csv  dragon_mode27.csv  dragon_mode28.csv  dragon_mode29.csv  dragon_mode3.csv  dragon_mode30.csv  dragon_mode4.csv  dragon_mode5.csv  dragon_mode6.csv  dragon_mode7.csv  dragon_mode8.csv  dragon_mode9.csv
data/ellipsoid/: ellipsoid_equivalent_dipole_mode0.csv  ellipsoid_equivalent_dipole_mode1.csv  ellipsoid_equivalent_dipole_mode2.csv  ellipsoid_equivalent_dipole_mode3.csv  ellipsoid_equivalent_dipole_mode4.csv  ellipsoid_equivalent_dipole_mode5.csv  ellipsoid_equivalent_dipole_mode6.csv  ellipsoid_equivalent_dipole_mode7.csv  ellipsoid_equivalent_dipole_mode8.csv  ellipsoid_mode0.csv  ellipsoid_mode1.csv  ellipsoid_mode2.csv  ellipsoid_mode3.csv  ellipsoid_mode4.csv  ellipsoid_mode5.csv  ellipsoid_mode6.csv  ellipsoid_mode7.csv  ellipsoid_mode8.csv
data/rod/: rod_equivalent_dipole_mode0.csv  rod_equivalent_dipole_mode1.csv  rod_equivalent_dipole_mode2.csv  rod_equivalent_dipole_mode3.csv  rod_mode0.csv  rod_mode1.csv  rod_mode2.csv  rod_mode3.csv
data/sphere/: sphere_equivalent_dipole_mode0.csv  sphere_equivalent_dipole_mode1.csv  sphere_equivalent_dipole_mode10.csv  sphere_equivalent_dipole_mode11.csv  sphere_equivalent_dipole_mode12.csv  sphere_equivalent_dipole_mode13.csv  sphere_equivalent_dipole_mode14.csv  sphere_equivalent_dipole_mode15.csv  sphere_equivalent_dipole_mode16.csv  sphere_equivalent_dipole_mode17.csv  sphere_equivalent_dipole_mode18.csv  sphere_equivalent_dipole_mode19.csv  sphere_equivalent_dipole_mode2.csv  sphere_equivalent_dipole_mode20.csv  sphere_equivalent_dipole_mode21.csv  sphere_equivalent_dipole_mode22.csv  sphere_equivalent_dipole_mode23.csv  sphere_equivalent_dipole_mode24.csv  sphere_equivalent_dipole_mode25.csv  sphere_equivalent_dipole_mode26.csv  sphere_equivalent_dipole_mode27.csv  sphere_equivalent_dipole_mode3.csv  sphere_equivalent_dipole_mode4.csv  sphere_equivalent_dipole_mode5.csv  sphere_equivalent_dipole_mode6.csv  sphere_equivalent_dipole_mode7.csv  sphere_equivalent_dipole_mode8.csv  sphere_equivalent_dipole_mode9.csv  sphere_mode0.csv  sphere_mode11.csv  sphere_mode15.csv  sphere_mode16.csv  sphere_mode18.csv  sphere_mode19.csv  sphere_mode2.csv  sphere_mode21.csv  sphere_mode24.csv  sphere_mode25.csv  sphere_mode26.csv  sphere_mode27.csv  (+2 more)
doc/: How_to_use_Spectra.md
include/: common.h
include/Audio/: AudioManager.h
include/Geometry/: BEM.h  Cache.h  EigenSolver.h  FEM.h  IO.h  TetMesh.h
include/Modal/: forces.h  modalData.h  modalIntegratorBase.h  modalIntegratorIIR.h
include/Transfer/: EquivalentSources.h  Power.h  Sampling.h  SphericalHarmonics.h
include/Utils/: colormap.h  colormap_autumn.h  colormap_bone.h  colormap_jet.h  colormap_um4.h  utils.h
python/script/: plot_waveform.ipynb  plot_waveform.py
python/validation/: check_eigensolver.ipynb  check_psi.ipynb  worker.py
src/Audio/: AudioManager.cpp
src/Geometry/: BEM.cpp  Cache.cpp  EigenSolver.cpp  FEM.cpp  IO.cpp  TetMesh.cpp
src/Modal/: forces.cpp  modalIntegratorIIR.cpp
src/Transfer/: EquivalentSources.cpp  Power.cpp  Sampling.cpp  SphericalHarmonics.cpp
src/Utils/: colormap.cpp  utils.cpp
test/: CMakeLists.txt
test/geometry/: check_mode_with_Jui_dataset.cpp  check_with_gptoolbox.cpp  test_EigenSolver.cpp  test_VegaWrapper.cpp  test_cache.cpp  test_eigenModeVisualization.cpp  test_geoIO.cpp  test_tetrahedralizer.cpp
test/miniaudio/: procedural_dampedSinWave.cpp  procedural_whitenoise.cpp  test_miniaudio.cpp
test/modal/: test_picking.cpp  test_realtime_modal_sound.cpp
